fix: suggestion scroll on mobile

--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -78,7 +78,7 @@
     overflow-x: hidden;
     padding-bottom: 12px;
     &-items {
-      transition: 200ms ease-in-out transform;
+      transition: 200ms linear transform;
     }
     &-item {
       background: @color-primary;
